[signal] spotless formatter